Fixed YAML formatting from /graphs endpoint
