# swagger_server/swagger/swagger.yaml
@@ -168,6 +168,9 @@ definitions:
       model_id:
         type: "string"
         description: "The id of the model that the Com is part of"
+      node_id:
+        type: "string"
+        description: "The id of the node instance that the Com is part of"
     description: "Represents one input or output of a Model"
     example:
       name: "name"
@@ -340,7 +343,9 @@ definitions:
     type: "object"
     required:
     - "args"
+    - "destination"
     - "name"
+    - "source"
     - "type"
     properties:
       id:
@@ -354,9 +359,9 @@ definitions:
         description: "The queue name or file name to use (depends on 'type')"
       type:
         $ref: "#/definitions/EdgeType"
-      from:
+      destination:
         $ref: "#/definitions/Com"
-      to:
+      source:
         $ref: "#/definitions/Com"
       operation:
         type: "string"
